// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectFile should render 1`] = `
<div>
  <div
    class="h-52 border-2 border-dashed rounded-lg mt-8 border-theme-secondary-300 dark:border-theme-secondary-800 p-2"
    data-testid="SelectFile"
  >
    <div
      class="h-full flex flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
    >
      <div
        class="mt-8"
      >
        <span
          class="font-semibold"
        >
          Drag & Drop or
           
        </span>
        <span
          class="font-semibold cursor-pointer link"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
        >
          Browse Files
        </span>
      </div>
      <div
        class="font-semibold text-theme-secondary-500 text-sm mt-2"
      >
        Supported format is 
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFile should render with dwe file format 1`] = `
<div>
  <div
    class="h-52 border-2 border-dashed rounded-lg mt-8 border-theme-secondary-300 dark:border-theme-secondary-800 p-2"
    data-testid="SelectFile"
  >
    <div
      class="h-full flex flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
    >
      <div
        class="sc-bdfBwQ fTnhmh"
        height="40"
        width="40"
      >
        <svg>
          dwe-file.svg
        </svg>
      </div>
      <div
        class="mt-8"
      >
        <span
          class="font-semibold"
        >
          Drag & Drop or
           
        </span>
        <span
          class="font-semibold cursor-pointer link"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
        >
          Browse Files
        </span>
      </div>
      <div
        class="font-semibold text-theme-secondary-500 text-sm mt-2"
      >
        Supported format is .dwe
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFile should render with json file format 1`] = `
<div>
  <div
    class="h-52 border-2 border-dashed rounded-lg mt-8 border-theme-secondary-300 dark:border-theme-secondary-800 p-2"
    data-testid="SelectFile"
  >
    <div
      class="h-full flex flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
    >
      <div
        class="sc-bdfBwQ fTnhmh"
        height="40"
        width="40"
      >
        <svg>
          json-file.svg
        </svg>
      </div>
      <div
        class="mt-8"
      >
        <span
          class="font-semibold"
        >
          Drag & Drop or
           
        </span>
        <span
          class="font-semibold cursor-pointer link"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
        >
          Browse Files
        </span>
      </div>
      <div
        class="font-semibold text-theme-secondary-500 text-sm mt-2"
      >
        Supported format is .json
      </div>
    </div>
  </div>
</div>
`;
